# magiceden-rs

./: .gitignore  Cargo.toml  Cross.toml
src/: api.rs  bot.rs  main.rs
