[package]
name = "magiceden-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-tungstenite = { version = "0.26.1", features = ["tokio", "tokio-runtime"] }
chromimic = { version = "0.12.0", features = ["websocket", "json"] }
cond = "1.0.5"
futures = "0.3.30"
proxied = "0.1.0"
rust_decimal = "1.35.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
solana-client = "1.18.16"
solana-sdk = "1.18.16"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.1"
