[package]
name = "magiceden-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-tungstenite = { version = "0.23", features = ["tokio", "tokio-runtime", "tokio-rustls-webpki-roots"] }
bincode = "1.3.3"
chromimic = { version = "0.12.0", features = ["websocket", "json", "socks"] }
cond = "1.0.5"
futures = "0.3.30"
openssl = { version = "0.10.64", features = ["vendored"] }
proxied = "0.2.2"
rand = "0.8.5"
reqwest = { version = "0.11.27", features = ["socks", "rustls-tls"], default-features = false }
rust_decimal = "1.35.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
socky = "0.2.1"
solana-client = "1.18.16"
solana-rpc-client = "1.18.16"
solana-sdk = "1.18.16"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tokio-rustls = "0.24.1"
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.1"
[patch.crates-io.aes-gcm-siv]
git = "https://github.com/RustCrypto/AEADs"
rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef"
