[package]
name = "magiceden-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
async-tungstenite = { version = "0.23", features = ["tokio", "tokio-runtime", "tokio-rustls-webpki-roots"] }
bincode = "1.3.3"
rquest  = { version = "0.21", features = ["json", "socks", "cookies", "brotli", "deflate", "gzip", "zstd"] }
chrono = "0.4.38"
cond = "1.0.5"
# console-subscriber = "0.4.0"
futures = "0.3.30"
proxied = "0.3.6"
rand = "0.8.5"
reqwest = { version = "0", features = ["socks"] }
rust_decimal = "1.35.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
socky = "0.2.3"
solana-client = "1.18.16"
solana-rpc-client = "1.18.16"
solana-sdk = "1.18.16"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full", "tracing"] }
tokio-rustls = "0.24.1"
toml = "0.8.14"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.1"
openssl = { version = "0.10.66", features = ["vendored"] }
[patch.crates-io.aes-gcm-siv]
git = "https://github.com/RustCrypto/AEADs"
rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef"

